--- a/index.html
+++ b/index.html
@@ -5,15 +5,184 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Readzone</title>
-
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/plugins/remixicon/fonts/remixicon.css">
 </head>
 
 <body>
-    <div class="nav-bar">
-        <div class="wrapper">
-            <div class="username">rifkiiard</div>
+    <div class="sidebar">
+        <div class="sidebar-header border-bottom">
+            <div class="logo">Readz<i class="ri-eye-2-line"></i>ne</div>
+            <div class="close-sidebar-toggle"><i class="ri-close-line"></i></div>
             <div class="clear"></div>
+        </div>
+        <div class="sidebar-profile border-bottom">
+            <div class="image">
+                <img src="assets/img/4.jpg" alt="user">
+            </div>
+            <p class="username">Rifki Ardiansyah</p>
+            <p class="money"><i class="ri-money-dollar-box-line mr-2"></i>Rp200.000</p>
+        </div>
+
+        <ul class="menu">
+            <li>
+                <a href="">
+                    <span class="icon">
+                        <i class="ri-layout-top-line"></i>
+                    </span>
+                    Top Up
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <span class="icon">
+                        <i class="ri-user-add-line"></i>
+                    </span>
+                    invite friends
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <span class="icon">
+                        <i class="ri-settings-3-line"></i>
+                    </span>
+                    Settings
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <span class="icon">
+                        <i class="ri-logout-circle-line"></i>
+                    </span>
+                    logout
+                </a>
+            </li>
+
+            <li>
+                <a href="">
+                    <span class="icon">
+                        <i class="ri-layout-top-line"></i>
+                    </span>
+                    Top Up
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <span class="icon">
+                        <i class="ri-user-add-line"></i>
+                    </span>
+                    invite friends
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <span class="icon">
+                        <i class="ri-settings-3-line"></i>
+                    </span>
+                    Settings
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <span class="icon">
+                        <i class="ri-logout-circle-line"></i>
+                    </span>
+                    logout
+                </a>
+            </li>
+
+            <li>
+                <a href="">
+                    <span class="icon">
+                        <i class="ri-layout-top-line"></i>
+                    </span>
+                    Top Up
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <span class="icon">
+                        <i class="ri-user-add-line"></i>
+                    </span>
+                    invite friends
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <span class="icon">
+                        <i class="ri-settings-3-line"></i>
+                    </span>
+                    Settings
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <span class="icon">
+                        <i class="ri-logout-circle-line"></i>
+                    </span>
+                    logout
+                </a>
+            </li>
+        </ul>
+
+        <div class="sidebar-footer border-top">
+            Created by <a href="https://instagram.com/fourgrammer" class="text-decoration-none">4G</a>
+        </div>
+    </div>
+    <div class="close-sidebar"></div>
+
+    <div class="nav-bar shadow-sm">
+        <div class="wrapper">
+            <span class="sidebar-toggle">
+                <i class="ri-menu-line"></i>
+            </span>
+            <div class="logo">Readz<i class="ri-eye-2-line"></i>ne</div>
+            <a href="" class="shop-toggle"><i class="ri-shopping-bag-line"></i></a>
+        </div>
+    </div>
+
+    <div class="bottom-bar shadow-lg">
+        <div class="wrapper">
+            <div class="menu active">
+                <a href="">
+                    <span class="icon">
+                        <i class="ri-home-2-line"></i>
+                    </span>
+                    Home
+                </a>
+            </div>
+            <div class="menu">
+                <a href="">
+                    <span class="icon">
+                        <i class="ri-search-line"></i>
+                    </span>
+                    Search
+                </a>
+            </div>
+            <div class="menu plus">
+                <a href="javascript:void(0)">
+                    <span class="icon">
+                        <i class="ri-add-line"></i>
+                    </span>
+                </a>
+            </div>
+            <div class="menu">
+                <a href="">
+                    <span class="icon">
+                        <i class="ri-mail-line"></i>
+                    </span>
+                    Inbox
+                </a>
+            </div>
+            <div class="menu">
+                <a href="">
+                    <span class="icon">
+                        <i class="ri-user-line"></i>
+                    </span>
+                    Account
+                </a>
+            </div>
+
         </div>
     </div>
 
