--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/plugins/remixicon/fonts/remixicon.css">
 </head>
 
 <body class="auth">
@@ -22,9 +23,9 @@
                 <h2 class="mb-5">
                     To keep connected with us please login with your personal information
                 </h2>
-                <form action="">
+                <form action="index.html" method="POST">
                     <div class="form-group-default mb-3">
-                        <div class="form-icon"><i class="fas fa-user"></i></div>
+                        <div class="form-icon"><i class="ri-user-line"></i></div>
                         <div class="form-area">
                             <label for="username">Username or Email Address</label>
                             <input type="text" name="username" id="username">
@@ -32,7 +33,7 @@
                     </div>
 
                     <div class="form-group-default">
-                        <div class="form-icon"><i class="fas fa-lock"></i></div>
+                        <div class="form-icon"><i class="ri-lock-2-line"></i></div>
                         <div class="form-area">
                             <label for="password">Password</label>
                             <input type="password" name="password" id="password">
