--- a/register.html
+++ b/register.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/plugins/remixicon/fonts/remixicon.css">
 </head>
 
 <body class="auth">
@@ -20,30 +21,30 @@
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam sit velit vitae voluptate nihil omnis
                     dolorum repudiandae nisi, veritatis ipsum!
                 </h2>
-                <form action="">
+                <form action="index.html" method="POST">
                     <div class="form-group-default mb-3">
-                        <div class="form-icon"><i class="fas fa-envelope"></i></div>
+                        <div class="form-icon"><i class="ri-mail-line"></i></div>
                         <div class="form-area">
                             <label for="email">Email Address</label>
                             <input type="text" name="email" id="email">
                         </div>
                     </div>
                     <div class="form-group-default mb-3">
-                        <div class="form-icon"><i class="fas fa-user"></i></div>
+                        <div class="form-icon"><i class="ri-user-line"></i></div>
                         <div class="form-area">
                             <label for="username">Username</label>
                             <input type="text" username="username" id="username">
                         </div>
                     </div>
                     <div class="form-group-default mb-3">
-                        <div class="form-icon"><i class="fas fa-lock"></i></div>
+                        <div class="form-icon"><i class="ri-lock-line"></i></div>
                         <div class="form-area">
                             <label for="password">Password</label>
                             <input type="password" name="password" id="password">
                         </div>
                     </div>
                     <div class="form-group-default mb-3">
-                        <div class="form-icon"><i class="fas fa-lock"></i></div>
+                        <div class="form-icon"><i class="ri-lock-line"></i></div>
                         <div class="form-area">
                             <label for="password">Confirm Password</label>
                             <input type="password" name="password" id="password">
