--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Readzone</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/plugins/remixicon/fonts/remixicon.css">
 </head>
 
 <body>
@@ -185,6 +184,32 @@
 
         </div>
     </div>
+
+    <div class="share-modal">
+        <p class="border-bottom share-title">Share to</p>
+        <div class="share-menu">
+            <a href="" class="share-menu-item clipboard">
+                <i class="ri-clipboard-line"></i>
+            </a>
+            <a href="" class="share-menu-item instagram">
+                <i class="ri-instagram-line"></i>
+            </a>
+            <a href="" class="share-menu-item whatsapp">
+                <i class="ri-whatsapp-line"></i>
+            </a>
+            <a href="" class="share-menu-item twitter">
+                <i class="ri-twitter-line"></i>
+            </a>
+            <a href="" class="share-menu-item facebook">
+                <i class="ri-facebook-line"></i>
+            </a>
+            <a href="" class="share-menu-item line">
+                <i class="ri-line-line"></i>
+            </a>
+            <div class="clear"></div>
+        </div>
+    </div>
+    <div class="close-share-modal"></div>
 
     <script src="assets/plugins/jquery/jquery-3.3.1.js"></script>
     <script src="assets/plugins/bootstrap4/dist/js/bootstrap.js"></script>
