add new post and book button

--- a/index.html
+++ b/index.html
@@ -33,73 +33,7 @@
                 </a>
             </li>
             <li>
-                <a href="">
-                    <span class="icon">
-                        <i class="ri-user-add-line"></i>
-                    </span>
-                    invite friends
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <span class="icon">
-                        <i class="ri-settings-3-line"></i>
-                    </span>
-                    Settings
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <span class="icon">
-                        <i class="ri-logout-circle-line"></i>
-                    </span>
-                    logout
-                </a>
-            </li>
-
-            <li>
-                <a href="">
-                    <span class="icon">
-                        <i class="ri-layout-top-line"></i>
-                    </span>
-                    Top Up
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <span class="icon">
-                        <i class="ri-user-add-line"></i>
-                    </span>
-                    invite friends
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <span class="icon">
-                        <i class="ri-settings-3-line"></i>
-                    </span>
-                    Settings
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <span class="icon">
-                        <i class="ri-logout-circle-line"></i>
-                    </span>
-                    logout
-                </a>
-            </li>
-
-            <li>
-                <a href="">
-                    <span class="icon">
-                        <i class="ri-layout-top-line"></i>
-                    </span>
-                    Top Up
-                </a>
-            </li>
-            <li>
-                <a href="">
+                <a href="javascript:void(0)" data-toggle="modal-share">
                     <span class="icon">
                         <i class="ri-user-add-line"></i>
                     </span>
@@ -211,7 +145,25 @@
     </div>
     <div class="close-share-modal"></div>
 
+    <div class="modal-menu-plus">
+        <ul>
+            <li>
+                <a href="">
+                    <span class="icon shadow-sm"><i class="ri-article-line"></i></span>
+                    <span class="menu-title shadow-sm">New Post</span>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <span class="icon shadow-sm"><i class="ri-book-2-line"></i></span>
+                    <span class="menu-title shadow-sm">New book</span>
+                </a>
+            </li>
+        </ul>
+    </div>
+
     <script src="assets/plugins/jquery/jquery-3.3.1.js"></script>
+    <script src="assets/plugins/popper/popper.min.js"></script>
     <script src="assets/plugins/bootstrap4/dist/js/bootstrap.js"></script>
     <script src="assets/js/app.js"></script>
 </body>
