--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+    <div class="preload">
+        <div class="spin"></div>
+    </div>
+
     <div class="sidebar">
         <div class="sidebar-header border-bottom">
             <div class="logo">Readz<i class="ri-eye-2-line"></i>ne</div>
@@ -115,8 +119,24 @@
                     Account
                 </a>
             </div>
-
         </div>
+    </div>
+
+    <div class="modal-menu-plus">
+        <ul>
+            <li>
+                <a href="">
+                    <span class="icon shadow-sm"><i class="ri-article-line"></i></span>
+                    <span class="menu-title shadow-sm">New Post</span>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <span class="icon shadow-sm"><i class="ri-book-2-line"></i></span>
+                    <span class="menu-title shadow-sm">New book</span>
+                </a>
+            </li>
+        </ul>
     </div>
 
     <div class="share-modal">
@@ -144,23 +164,6 @@
         </div>
     </div>
     <div class="close-share-modal"></div>
-
-    <div class="modal-menu-plus">
-        <ul>
-            <li>
-                <a href="">
-                    <span class="icon shadow-sm"><i class="ri-article-line"></i></span>
-                    <span class="menu-title shadow-sm">New Post</span>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <span class="icon shadow-sm"><i class="ri-book-2-line"></i></span>
-                    <span class="menu-title shadow-sm">New book</span>
-                </a>
-            </li>
-        </ul>
-    </div>
 
     <script src="assets/plugins/jquery/jquery-3.3.1.js"></script>
     <script src="assets/plugins/popper/popper.min.js"></script>
