--- a/index.html
+++ b/index.html
@@ -8,18 +8,22 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body>
+<body class="light">
     <div class="preload">
         <div class="spin"></div>
     </div>
 
     <div class="sidebar">
-        <div class="sidebar-header border-bottom">
+        <div class="sidebar-header">
             <div class="logo">Readz<i class="ri-eye-2-line"></i>ne</div>
             <div class="close-sidebar-toggle"><i class="ri-close-line"></i></div>
             <div class="clear"></div>
         </div>
-        <div class="sidebar-profile border-bottom">
+        <div class="sidebar-profile">
+            <div class="theme-toggle">
+                <input type="checkbox" id="theme">
+                <label for="theme"></label>
+            </div>
             <div class="image">
                 <img src="assets/img/4.jpg" alt="user">
             </div>
@@ -60,9 +64,75 @@
                     logout
                 </a>
             </li>
+
+
+            <li>
+                <a href="">
+                    <span class="icon">
+                        <i class="ri-layout-top-line"></i>
+                    </span>
+                    Top Up
+                </a>
+            </li>
+            <li>
+                <a href="javascript:void(0)" data-toggle="modal-share">
+                    <span class="icon">
+                        <i class="ri-user-add-line"></i>
+                    </span>
+                    invite friends
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <span class="icon">
+                        <i class="ri-settings-3-line"></i>
+                    </span>
+                    Settings
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <span class="icon">
+                        <i class="ri-logout-circle-line"></i>
+                    </span>
+                    logout
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <span class="icon">
+                        <i class="ri-layout-top-line"></i>
+                    </span>
+                    Top Up
+                </a>
+            </li>
+            <li>
+                <a href="javascript:void(0)" data-toggle="modal-share">
+                    <span class="icon">
+                        <i class="ri-user-add-line"></i>
+                    </span>
+                    invite friends
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <span class="icon">
+                        <i class="ri-settings-3-line"></i>
+                    </span>
+                    Settings
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <span class="icon">
+                        <i class="ri-logout-circle-line"></i>
+                    </span>
+                    logout
+                </a>
+            </li>
         </ul>
 
-        <div class="sidebar-footer border-top">
+        <div class="sidebar-footer">
             Created by <a href="https://instagram.com/fourgrammer" class="text-decoration-none">4G</a>
         </div>
     </div>
